--- a/MovieCollectionViewCell.xib
+++ b/MovieCollectionViewCell.xib
@@ -22,6 +22,16 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJu-iQ-KIu">
+                        <rect key="frame" x="88" y="58" width="0.0" height="0.0"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <accessibility key="accessibilityConfiguration">
+                            <bool key="isElement" value="NO"/>
+                        </accessibility>
+                        <fontDescription key="fontDescription" type="system" pointSize="1"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="X76-R6-iZq">
                         <rect key="frame" x="0.0" y="22" width="150" height="128"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -36,6 +46,7 @@
             <connections>
                 <outlet property="MovieCollectionImage" destination="X76-R6-iZq" id="g6m-sT-1EO"/>
                 <outlet property="MovieCollectionLabel" destination="2Tg-PD-nHp" id="hGL-w9-Hs0"/>
+                <outlet property="MovieCollectionMovieId" destination="PJu-iQ-KIu" id="fh0-ks-APL"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="103.79464285714285"/>
         </collectionViewCell>
